// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report reducer should return handle ARCHIVE_REPORT_SUCCESS action correctly 1`] = `
Object {
  "loading": false,
  "response": Object {
    "reports": Array [
      Object {
        "_id": "5c5afa15bc8f70175006ff02",
        "archived": true,
        "createdAt": "2019-02-06T15:15:38.874Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Edited awesome report 1",
        "updatedAt": "2019-02-06T15:31:38.014Z",
      },
      Object {
        "_id": "5c5afb478e9ced17f8d59c5b",
        "archived": false,
        "createdAt": "2019-02-06T15:20:44.723Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Awesome report 1",
        "updatedAt": "2019-02-10T01:40:01.168Z",
      },
      Object {
        "_id": "5c603a081e36fa24d709a642",
        "archived": true,
        "createdAt": "2019-02-10T14:49:46.720Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "June suprising fact",
        "updatedAt": "2019-02-10T14:49:46.720Z",
      },
      Object {
        "_id": "5c6042d991e77c29420808ff",
        "archived": true,
        "createdAt": "2019-02-10T15:27:23.314Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "A new dawn",
        "updatedAt": "2019-02-10T15:27:23.314Z",
      },
      Object {
        "_id": "5c604d89ad1d332da76a46ed",
        "archived": false,
        "createdAt": "2019-02-10T16:13:01.885Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "We made it",
        "updatedAt": "2019-02-10T16:13:01.885Z",
      },
      Object {
        "_id": "5c604e01ad1d332da76a46ef",
        "archived": true,
        "createdAt": "2019-02-10T16:14:59.646Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Repo",
        "updatedAt": "2019-02-10T16:14:59.646Z",
      },
      Object {
        "_id": "5c604e83ad1d332da76a46f0",
        "archived": true,
        "createdAt": "2019-02-10T16:17:11.737Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Amazing year",
        "updatedAt": "2019-02-10T16:17:11.737Z",
      },
      Object {
        "_id": "5c605087ad1d332da76a46f1",
        "archived": false,
        "createdAt": "2019-02-10T16:25:47.295Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "Amazing quarter",
        "updatedAt": "2019-02-10T16:25:47.295Z",
      },
      Object {
        "__v": 0,
        "_id": "5c6050aaad1d332da76a46f2",
        "archived": true,
        "createdAt": "2019-02-10T16:26:21.179Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "A new dawn",
        "updatedAt": "2019-02-10T16:26:21.179Z",
      },
    ],
  },
}
`;

exports[`Report reducer should return handle DELETE_REPORT_SUCCESS action correctly 1`] = `
Object {
  "action": "delete",
  "loading": false,
  "response": Object {
    "report": Object {
      "_id": "5c5afa15bc8f70175006ff02",
      "archived": true,
      "createdAt": "2019-02-06T15:15:38.874Z",
      "reportFile": Object {},
      "reportType": "annual",
      "title": "Edited awesome report 1",
      "updatedAt": "2019-02-06T15:31:38.014Z",
    },
    "reports": Array [
      Object {
        "_id": "5c5afb478e9ced17f8d59c5b",
        "archived": false,
        "createdAt": "2019-02-06T15:20:44.723Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Awesome report 1",
        "updatedAt": "2019-02-10T01:40:01.168Z",
      },
      Object {
        "_id": "5c603a081e36fa24d709a642",
        "archived": true,
        "createdAt": "2019-02-10T14:49:46.720Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "June suprising fact",
        "updatedAt": "2019-02-10T14:49:46.720Z",
      },
      Object {
        "_id": "5c6042d991e77c29420808ff",
        "archived": true,
        "createdAt": "2019-02-10T15:27:23.314Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "A new dawn",
        "updatedAt": "2019-02-10T15:27:23.314Z",
      },
      Object {
        "_id": "5c604d89ad1d332da76a46ed",
        "archived": false,
        "createdAt": "2019-02-10T16:13:01.885Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "We made it",
        "updatedAt": "2019-02-10T16:13:01.885Z",
      },
      Object {
        "_id": "5c604e01ad1d332da76a46ef",
        "archived": true,
        "createdAt": "2019-02-10T16:14:59.646Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Repo",
        "updatedAt": "2019-02-10T16:14:59.646Z",
      },
      Object {
        "_id": "5c604e83ad1d332da76a46f0",
        "archived": true,
        "createdAt": "2019-02-10T16:17:11.737Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "Amazing year",
        "updatedAt": "2019-02-10T16:17:11.737Z",
      },
      Object {
        "_id": "5c605087ad1d332da76a46f1",
        "archived": false,
        "createdAt": "2019-02-10T16:25:47.295Z",
        "reportFile": Object {},
        "reportType": "quarterly",
        "title": "Amazing quarter",
        "updatedAt": "2019-02-10T16:25:47.295Z",
      },
      Object {
        "__v": 0,
        "_id": "5c6050aaad1d332da76a46f2",
        "archived": true,
        "createdAt": "2019-02-10T16:26:21.179Z",
        "reportFile": Object {},
        "reportType": "annual",
        "title": "A new dawn",
        "updatedAt": "2019-02-10T16:26:21.179Z",
      },
    ],
  },
}
`;
